--- a/tempelates/home.hbs
+++ b/tempelates/home.hbs
@@ -15,7 +15,7 @@
     <section>
         <nav>
             <div class="logo">
-                <h1>Sneakers_<span>Bid</span></h1>
+                <h1>Sneakers_<span>Website</span></h1>
             </div>
 
             <ul>
